--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -11,27 +11,26 @@ install! 'cocoapods', :disable_input_output_paths => true
 def capacitor_pods
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
-  pod 'CapacitorCommunityBackgroundGeolocation', :path => '..\..\node_modules\@capacitor-community\background-geolocation'
-  pod 'CapacitorCommunityBluetoothLe', :path => '..\..\node_modules\@capacitor-community\bluetooth-le'
-  pod 'CapacitorCommunityFileOpener', :path => '..\..\node_modules\@capacitor-community\file-opener'
-  pod 'CapacitorCommunityKeepAwake', :path => '..\..\node_modules\@capacitor-community\keep-awake'
-  pod 'CapacitorCommunitySqlite', :path => '..\..\node_modules\@capacitor-community\sqlite'
-  pod 'CapacitorApp', :path => '..\..\node_modules\@capacitor\app'
-  pod 'CapacitorCamera', :path => '..\..\node_modules\@capacitor\camera'
-  pod 'CapacitorDevice', :path => '..\..\node_modules\@capacitor\device'
-  pod 'CapacitorFilesystem', :path => '..\..\node_modules\@capacitor\filesystem'
-  pod 'CapacitorGeolocation', :path => '..\..\node_modules\@capacitor\geolocation'
-  pod 'CapacitorHaptics', :path => '..\..\node_modules\@capacitor\haptics'
-  pod 'CapacitorKeyboard', :path => '..\..\node_modules\@capacitor\keyboard'
-  pod 'CapacitorLocalNotifications', :path => '..\..\node_modules\@capacitor\local-notifications'
-  pod 'CapacitorNetwork', :path => '..\..\node_modules\@capacitor\network'
-  pod 'CapacitorPreferences', :path => '..\..\node_modules\@capacitor\preferences'
-  pod 'CapacitorPushNotifications', :path => '..\..\node_modules\@capacitor\push-notifications'
-  pod 'CapacitorSplashScreen', :path => '..\..\node_modules\@capacitor\splash-screen'
-  pod 'CapacitorStatusBar', :path => '..\..\node_modules\@capacitor\status-bar'
-  pod 'CapawesomeCapacitorBadge', :path => '..\..\node_modules\@capawesome\capacitor-badge'
-  pod 'MozartecCapacitorMicrophone', :path => '..\..\node_modules\@mozartec\capacitor-microphone'
-  pod 'CapacitorPluginHeadset', :path => '..\..\node_modules\capacitor-plugin-headset'
+  pod 'CapacitorCommunityBackgroundGeolocation', :path => '../../node_modules/@capacitor-community/background-geolocation'
+  pod 'CapacitorCommunityBluetoothLe', :path => '../../node_modules/@capacitor-community/bluetooth-le'
+  pod 'CapacitorCommunityFileOpener', :path => '../../node_modules/@capacitor-community/file-opener'
+  pod 'CapacitorCommunityKeepAwake', :path => '../../node_modules/@capacitor-community/keep-awake'
+  pod 'CapacitorCommunitySqlite', :path => '../../node_modules/@capacitor-community/sqlite'
+  pod 'CapacitorApp', :path => '../../node_modules/@capacitor/app'
+  pod 'CapacitorCamera', :path => '../../node_modules/@capacitor/camera'
+  pod 'CapacitorDevice', :path => '../../node_modules/@capacitor/device'
+  pod 'CapacitorFilesystem', :path => '../../node_modules/@capacitor/filesystem'
+  pod 'CapacitorGeolocation', :path => '../../node_modules/@capacitor/geolocation'
+  pod 'CapacitorHaptics', :path => '../../node_modules/@capacitor/haptics'
+  pod 'CapacitorKeyboard', :path => '../../node_modules/@capacitor/keyboard'
+  pod 'CapacitorLocalNotifications', :path => '../../node_modules/@capacitor/local-notifications'
+  pod 'CapacitorNetwork', :path => '../../node_modules/@capacitor/network'
+  pod 'CapacitorPreferences', :path => '../../node_modules/@capacitor/preferences'
+  pod 'CapacitorPushNotifications', :path => '../../node_modules/@capacitor/push-notifications'
+  pod 'CapacitorSplashScreen', :path => '../../node_modules/@capacitor/splash-screen'
+  pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
+  pod 'CapawesomeCapacitorBadge', :path => '../../node_modules/@capawesome/capacitor-badge'
+  pod 'CapacitorPluginResgrid', :path => '../../node_modules/capacitor-plugin-resgrid'
 end
 
 target 'App' do
