CU-8685z4x38 minor styling updates

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -4,7 +4,8 @@
 	"webDir": "www",
 	"bundledWebRuntime": false,
 	"android": {
-		"allowMixedContent": true
+		"allowMixedContent": true,
+		"useLegacyBridge": true
 	},
 	"server": {
 		"allowNavigation": []
