--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "android": "npm run build && npx cap sync && ionic capacitor run android --external"
   },
   "dependencies": {
-    "@angular/animations": "^14.3.0",
+    "@angular/animations": "^15.2.10",
     "@angular/cdk": "^14.2.7",
-    "@angular/common": "^14.3.0",
-    "@angular/compiler": "^14.3.0",
-    "@angular/core": "^14.3.0",
-    "@angular/forms": "^14.3.0",
-    "@angular/platform-browser": "^14.3.0",
-    "@angular/platform-browser-dynamic": "^14.3.0",
-    "@angular/router": "^14.3.0",
+    "@angular/common": "^15.2.10",
+    "@angular/compiler": "^15.2.10",
+    "@angular/core": "^15.2.10",
+    "@angular/forms": "^15.2.10",
+    "@angular/platform-browser": "^15.2.10",
+    "@angular/platform-browser-dynamic": "^15.2.10",
+    "@angular/router": "^15.2.10",
     "@capacitor-community/background-geolocation": "^1.2.14",
     "@capacitor-community/bluetooth-le": "3.0.0",
     "@capacitor-community/file-opener": "^1.0.5",
@@ -50,18 +50,19 @@
     "@ionic/storage-angular": "3.0.6",
     "@mapbox/maki": "7.1.0",
     "@microsoft/signalr": "5.0.10",
-    "@ngrx/effects": "14.3.3",
-    "@ngrx/router-store": "14.3.3",
-    "@ngrx/store": "14.3.3",
-    "@ngrx/store-devtools": "14.3.3",
+    "@ngrx/effects": "^15.1.0",
+    "@ngrx/router-store": "^15.1.0",
+    "@ngrx/store": "^15.1.0",
+    "@ngrx/store-devtools": "^15.1.0",
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "@resgrid/ngx-resgridlib": "^1.3.33",
-    "@sentry/angular": "^7.75.1",
-    "@sentry/tracing": "^7.75.1",
+    "@sentry/angular": "^8.7.0",
+    "@sentry/tracing": "^7.114.0",
     "@turf/turf": "6.5.0",
     "@videogular/ngx-videogular": "^6.0.0",
     "angular-calendar": "^0.29.0",
+    "angular-svg-icon": "15.0.0",
     "base64-arraybuffer": "1.0.1",
     "capacitor-plugin-resgrid": "^1.0.13",
     "cupertino-pane": "1.2.81",
@@ -73,8 +74,8 @@
     "leaflet": "1.7.1",
     "mapbox-gl": "2.5.0",
     "ng-gallery": "^7.1.2",
-    "ngrx-store-freeze": "0.2.4",
-    "ngrx-store-localstorage": "14.0.0",
+    "ngrx-store-freeze": "^0.2.4",
+    "ngrx-store-localstorage": "^15.0.0",
     "ngx-perfect-scrollbar": "10.1.1",
     "rxjs": "^7.5.0",
     "subsink": "1.0.2",
@@ -84,14 +85,14 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.12",
+    "@angular-devkit/build-angular": "15.2.11",
     "@angular-eslint/builder": "14.3.0",
     "@angular-eslint/eslint-plugin": "14.3.0",
     "@angular-eslint/eslint-plugin-template": "14.3.0",
     "@angular-eslint/template-parser": "14.3.0",
-    "@angular/cli": "14.2.12",
-    "@angular/compiler-cli": "14.3.0",
-    "@angular/language-service": "14.2.12",
+    "@angular/cli": "15.2.11",
+    "@angular/compiler-cli": "15.2.10",
+    "@angular/language-service": "15.2.10",
     "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/googlemaps": "^3.43.3",
