CU-868ex18rd Setting correct version numbers in build

--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -154,13 +154,16 @@ jobs:
             sudo apt-get update && sudo apt-get install -y jq
           fi
 
+          androidVersionCode=$((5080345 + ${{ github.run_number }}))
+          echo "Android Version Code: ${androidVersionCode}"
+
           # Fix the main entry in package.json
           if [ -f ./package.json ]; then
             # Create a backup
             cp package.json package.json.bak
             # Update the package.json
-            jq '.version = "7.${{ github.run_number }}"' package.json > package.json.tmp && mv package.json.tmp package.json
-            jq '.versionCode = "7${{ github.run_number }}"' package.json > package.json.tmp && mv package.json.tmp package.json
+            jq '.version = "10.${{ github.run_number }}"' package.json > package.json.tmp && mv package.json.tmp package.json
+            jq '.versionCode = "${androidVersionCode}"' package.json > package.json.tmp && mv package.json.tmp package.json
             echo "Updated package.json versions"
             cat package.json | grep "version"
             cat package.json | grep "versionCode"
