CU-868ex18rd Fix for lint issue, bug fixes, status fix, side menu work.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@config-plugins/react-native-callkeep": "^11.0.0",
     "@config-plugins/react-native-webrtc": "~12.0.0",
     "@dev-plugins/react-query": "~0.2.0",
-    "@expo/config-plugins": "~9.0.0",
     "@expo/html-elements": "~0.10.1",
     "@expo/metro-runtime": "~4.0.0",
     "@gluestack-ui/accordion": "~1.0.6",
@@ -115,12 +114,11 @@
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
     "expo-location": "~18.0.10",
-    "expo-modules-core": "~2.2.3",
     "expo-navigation-bar": "~4.0.9",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.21",
     "expo-screen-orientation": "~8.0.4",
-    "expo-secure-store": "^14.2.3",
+    "expo-secure-store": "~14.0.1",
     "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.0",
@@ -135,7 +133,7 @@
     "moti": "~0.29.0",
     "nativewind": "~4.1.21",
     "react": "18.3.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "18.3.1",
     "react-error-boundary": "~4.0.13",
     "react-hook-form": "~7.53.0",
     "react-i18next": "~15.0.1",
