--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -125,7 +125,13 @@ jobs:
           node-version: '24'
           cache: 'yarn'
 
-      - name: Setup Expo
+      - name: 🔎 Verify Xcode toolchain
+        if: matrix.platform == 'ios'
+        run: |
+          xcodebuild -version
+          swift --version
+
+      - name: 🏗 Setup Expo
         uses: expo/expo-github-action@v8
         with:
           expo-version: latest
@@ -152,10 +158,18 @@ jobs:
 
       - name: 📋 Update package.json Versions
         run: |
-          # Check if jq is installed, if not install it
+          # Ensure jq is available on both Linux and macOS
           if ! command -v jq &> /dev/null; then
             echo "Installing jq..."
-            sudo apt-get update && sudo apt-get install -y jq
+            if [ "${RUNNER_OS}" = "Linux" ]; then
+              sudo apt-get update && sudo apt-get install -y jq
+            elif [ "${RUNNER_OS}" = "macOS" ]; then
+              brew update || true
+              brew install jq
+            else
+              echo "Unsupported runner OS: ${RUNNER_OS}" >&2
+              exit 1
+            fi
           fi
 
           androidVersionCode=$((5080345 + ${{ github.run_number }}))
