--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-query-kit": "~3.3.0",
+    "sanitize-html": "^2.17.0",
     "tailwind-variants": "~0.2.1",
     "zod": "~3.23.8",
     "zustand": "~4.5.5"
@@ -176,6 +177,7 @@
     "@types/lodash.memoize": "~4.1.9",
     "@types/react": "~18.3.12",
     "@types/react-native-base64": "~0.2.2",
+    "@types/sanitize-html": "^2.16.0",
     "@typescript-eslint/eslint-plugin": "~5.62.0",
     "@typescript-eslint/parser": "~5.62.0",
     "babel-jest": "~30.0.0",
