--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "@notifee/react-native": "^9.1.8",
     "@novu/react-native": "~2.6.6",
     "@react-native-community/netinfo": "11.4.1",
-    "@rnmapbox/maps": "10.1.38",
+    "@rnmapbox/maps": "10.1.42-rc.0",
     "@semantic-release/git": "^10.0.1",
     "@sentry/react-native": "~6.10.0",
     "@shopify/flash-list": "1.7.3",
@@ -137,26 +137,26 @@
     "react-error-boundary": "~4.0.13",
     "react-hook-form": "~7.53.0",
     "react-i18next": "~15.0.1",
-    "react-native": "0.76.9",
+    "react-native": "0.77.3",
     "react-native-base64": "~0.2.1",
     "react-native-ble-manager": "^12.1.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-callkeep": "github:Irfanwani/react-native-callkeep#957193d0716f1c2dfdc18e627cbff0f8a0800971",
     "react-native-edge-to-edge": "~1.1.2",
     "react-native-flash-message": "~0.4.2",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.22.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-controller": "~1.15.2",
     "react-native-logs": "~5.3.0",
     "react-native-mmkv": "~3.1.0",
     "react-native-permissions": "^5.4.1",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.16.7",
     "react-native-restart": "0.0.27",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "~5.1.0",
+    "react-native-screens": "~4.8.0",
     "react-native-svg": "~15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "~13.13.1",
     "react-query-kit": "~3.3.0",
     "sanitize-html": "^2.17.0",
     "tailwind-variants": "~0.2.1",
@@ -226,7 +226,13 @@
     },
     "install": {
       "exclude": [
-        "eslint-config-expo"
+        "eslint-config-expo",
+        "react-native@~0.76.6",
+        "react-native-reanimated@~3.16.1",
+        "react-native-gesture-handler@~2.20.0",
+        "react-native-screens@~4.4.0",
+        "react-native-safe-area-context@~4.12.0",
+        "react-native-webview@~13.12.5"
       ]
     }
   },
