--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "react-native-safe-area-context": "~5.1.0",
     "react-native-screens": "~4.8.0",
     "react-native-svg": "~15.8.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "~13.13.1",
     "react-query-kit": "~3.3.0",
