--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "@aptabase/react-native": "^0.3.10",
     "@config-plugins/react-native-callkeep": "^11.0.0",
     "@config-plugins/react-native-webrtc": "~12.0.0",
-    "@dev-plugins/react-query": "~0.2.0",
+    "@dev-plugins/react-query": "~0.3.1",
     "@expo/html-elements": "~0.10.1",
-    "@expo/metro-runtime": "~4.0.0",
+    "@expo/metro-runtime": "~5.0.4",
     "@gluestack-ui/accordion": "~1.0.6",
-    "@gluestack-ui/actionsheet": "~0.2.44",
+    "@gluestack-ui/actionsheet": "^0.2.44",
     "@gluestack-ui/alert": "~0.1.15",
-    "@gluestack-ui/alert-dialog": "~0.1.30",
+    "@gluestack-ui/alert-dialog": "^0.1.30",
     "@gluestack-ui/avatar": "~0.1.17",
     "@gluestack-ui/button": "~1.0.14",
     "@gluestack-ui/checkbox": "~0.1.31",
@@ -61,7 +61,7 @@
     "@gluestack-ui/input": "~0.1.38",
     "@gluestack-ui/link": "~0.1.22",
     "@gluestack-ui/menu": "~0.2.43",
-    "@gluestack-ui/modal": "~0.1.35",
+    "@gluestack-ui/modal": "^0.1.35",
     "@gluestack-ui/nativewind-utils": "~1.0.26",
     "@gluestack-ui/overlay": "~0.1.16",
     "@gluestack-ui/popover": "~0.1.49",
@@ -74,7 +74,7 @@
     "@gluestack-ui/switch": "~0.1.22",
     "@gluestack-ui/textarea": "~0.1.23",
     "@gluestack-ui/toast": "~1.0.8",
-    "@gluestack-ui/tooltip": "~0.1.32",
+    "@gluestack-ui/tooltip": "^0.1.28",
     "@gorhom/bottom-sheet": "~5.0.5",
     "@hookform/resolvers": "~3.9.0",
     "@legendapp/motion": "~2.4.0",
@@ -87,8 +87,8 @@
     "@react-native-community/netinfo": "11.4.1",
     "@rnmapbox/maps": "10.1.42-rc.0",
     "@semantic-release/git": "^10.0.1",
-    "@sentry/react-native": "~6.10.0",
-    "@shopify/flash-list": "1.7.3",
+    "@sentry/react-native": "~6.14.0",
+    "@shopify/flash-list": "1.7.6",
     "@tanstack/react-query": "~5.52.1",
     "app-icon-badge": "^0.1.2",
     "axios": "^1.11.0",
@@ -96,34 +96,34 @@
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.46",
-    "expo-application": "~6.0.2",
-    "expo-asset": "~11.0.5",
-    "expo-audio": "~0.3.5",
-    "expo-av": "~15.0.2",
-    "expo-build-properties": "~0.13.3",
-    "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.20",
-    "expo-device": "~7.0.3",
-    "expo-document-picker": "~13.0.3",
-    "expo-file-system": "~18.0.12",
-    "expo-font": "~13.0.2",
-    "expo-image": "~2.0.7",
-    "expo-image-picker": "~16.0.6",
-    "expo-keep-awake": "~14.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-localization": "~16.0.0",
-    "expo-location": "~18.0.10",
-    "expo-navigation-bar": "~4.0.9",
-    "expo-notifications": "~0.29.14",
-    "expo-router": "~4.0.21",
-    "expo-screen-orientation": "~8.0.4",
-    "expo-secure-store": "~14.0.1",
-    "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.9",
-    "expo-task-manager": "~12.0.6",
+    "expo": "~53.0.0",
+    "expo-application": "~6.1.5",
+    "expo-asset": "~11.1.7",
+    "expo-audio": "~0.4.9",
+    "expo-av": "~15.1.7",
+    "expo-build-properties": "~0.14.8",
+    "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
+    "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
+    "expo-image": "~2.4.0",
+    "expo-image-picker": "~16.1.4",
+    "expo-keep-awake": "~14.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-localization": "~16.1.6",
+    "expo-location": "~18.1.6",
+    "expo-navigation-bar": "~4.2.8",
+    "expo-notifications": "~0.31.4",
+    "expo-router": "~5.1.5",
+    "expo-screen-orientation": "~8.1.7",
+    "expo-secure-store": "~14.2.4",
+    "expo-sharing": "~13.1.5",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.11",
+    "expo-task-manager": "~13.1.6",
     "geojson": "~0.5.0",
     "i18next": "~23.14.0",
     "livekit-client": "~2.15.2",
@@ -132,35 +132,35 @@
     "lucide-react-native": "~0.475.0",
     "moti": "~0.29.0",
     "nativewind": "~4.1.21",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-error-boundary": "~4.0.13",
     "react-hook-form": "~7.53.0",
     "react-i18next": "~15.0.1",
-    "react-native": "0.77.3",
+    "react-native": "0.79.5",
     "react-native-base64": "~0.2.1",
     "react-native-ble-manager": "^12.1.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-callkeep": "github:Irfanwani/react-native-callkeep#957193d0716f1c2dfdc18e627cbff0f8a0800971",
-    "react-native-edge-to-edge": "~1.1.2",
+    "react-native-edge-to-edge": "1.6.0",
     "react-native-flash-message": "~0.4.2",
-    "react-native-gesture-handler": "~2.22.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-keyboard-controller": "~1.15.2",
+    "react-native-keyboard-controller": "^1.18.6",
     "react-native-logs": "~5.3.0",
     "react-native-mmkv": "~3.1.0",
     "react-native-permissions": "^5.4.1",
-    "react-native-reanimated": "~3.16.7",
+    "react-native-reanimated": "~3.17.4",
     "react-native-restart": "0.0.27",
-    "react-native-safe-area-context": "~5.1.0",
-    "react-native-screens": "~4.8.0",
-    "react-native-svg": "~15.8.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.20.0",
     "react-native-webview": "~13.13.1",
     "react-query-kit": "~3.3.0",
     "sanitize-html": "^2.17.0",
-    "tailwind-variants": "~0.2.1",
+    "tailwind-variants": "^3.1.0",
     "zod": "~3.23.8",
     "zustand": "~4.5.5"
   },
@@ -168,7 +168,7 @@
     "@babel/core": "~7.26.0",
     "@commitlint/cli": "~19.2.2",
     "@commitlint/config-conventional": "~19.2.2",
-    "@expo/config": "~10.0.3",
+    "@expo/config": "^11.0.0",
     "@testing-library/jest-dom": "~6.5.0",
     "@testing-library/react-native": "~12.9.0",
     "@types/crypto-js": "^4.2.2",
@@ -176,9 +176,10 @@
     "@types/i18n-js": "~3.8.9",
     "@types/jest": "~29.5.14",
     "@types/lodash.memoize": "~4.1.9",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-native-base64": "~0.2.2",
     "@types/sanitize-html": "^2.16.0",
+    "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "~5.62.0",
     "@typescript-eslint/parser": "~5.62.0",
     "babel-jest": "~30.0.0",
@@ -199,16 +200,16 @@
     "eslint-plugin-unused-imports": "~2.0.0",
     "jest": "~29.7.0",
     "jest-environment-jsdom": "~29.7.0",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.10",
     "jest-junit": "~16.0.0",
     "lint-staged": "~15.2.9",
     "np": "~10.0.7",
     "prettier": "~3.3.3",
     "react-native-svg-transformer": "~1.5.1",
     "tailwindcss": "3.4.4",
-    "ts-jest": "~29.1.2",
+    "ts-jest": "^29.2.6",
     "ts-node": "~10.9.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "repository": {
     "type": "git",
