--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "jsx": "react-native",
     "module": "es2015",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "sourceMap": true,
     "target": "esnext",
     "lib": ["esnext", "dom"],
@@ -22,7 +22,8 @@
     },
     "esModuleInterop": true,
     "checkJs": true,
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": ["./node_modules/@types", "./types"],
+    "noImplicitAny": false
   },
   "ts-node": {
     "compilerOptions": {
