--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,50 +7,27 @@
     "experimentalDecorators": true,
     "jsx": "react-native",
     "module": "es2015",
-    "moduleResolution": "bundler",
     "sourceMap": true,
     "target": "esnext",
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
     "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
       "@env": ["./src/lib/env.js"],
       "@assets/*": ["./assets/*"],
-      "tailwind.config": ["./tailwind.config.js"],
-      "@gluestack-ui/nativewind-utils/tva": ["./node_modules/@gluestack-ui/nativewind-utils/tva/index.d.ts"],
-      "@gluestack-ui/nativewind-utils/withStates": ["./node_modules/@gluestack-ui/nativewind-utils/withStates/index.d.ts"],
-      "@gluestack-ui/nativewind-utils/withStyleContext": ["./node_modules/@gluestack-ui/nativewind-utils/withStyleContext/index.d.ts"],
-      "@gluestack-ui/nativewind-utils/IsWeb": ["./node_modules/@gluestack-ui/nativewind-utils/IsWeb/index.d.ts"],
-      "@gluestack-ui/nativewind-utils/*": ["./node_modules/@gluestack-ui/nativewind-utils/*/index.d.ts"],
-      "tailwind-variants/dist/config": ["./node_modules/tailwind-variants/dist/config.d.ts"]
+      "tailwind.config": ["./tailwind.config.js"]
     },
     "esModuleInterop": true,
-    "typeRoots": ["./node_modules/@types", "./types"],
-    "noImplicitAny": true,
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-    "isolatedModules": true
+    "checkJs": true,
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
     }
   },
-  "exclude": [
-    "docs", 
-    "cli", 
-    "android", 
-    "lib", 
-    "ios", 
-    "node_modules",
-    "storybookDocsComponents",
-    "**/*.spec.ts",
-    "**/*.spec.tsx",
-    "**/node_modules/**"
-  ],
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "nativewind-env.d.ts", "__mocks__/**/*.ts", "__mocks__/**/*.tsx", "app.config.ts", "jest-setup.ts", "__tests__/**/*.ts", "__tests__/**/*.tsx", "test-actionsheet.tsx"]
+  "exclude": ["docs", "cli", "android", "lib", "ios", "node_modules", "storybookDocsComponents", "__mocks__"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "nativewind-env.d.ts", "app.config.ts", "jest-setup.ts", "jest-platform-setup.ts", "__tests__/**/*.ts", "__tests__/**/*.tsx", "types/**/*.ts"]
 }
