--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-image": "~2.4.0",
+    "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-keep-awake": "~14.1.4",
     "expo-linking": "~7.1.7",
