CU-868ex18rd Migrating to countly

--- a/.env.development
+++ b/.env.development
@@ -21,5 +21,5 @@ RESPOND_MAPBOX_DLKEY=
 
 # Analytics Configuration
 RESPOND_SENTRY_DSN=
-RESPOND_APTABASE_APP_KEY=
-RESPOND_APTABASE_URL=
+RESPOND_COUNTLY_APP_KEY=
+RESPOND_COUNTLY_URL=
