CU-868frp6xf Fixing issue with recipients not being visible

--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -70,6 +70,8 @@ env:
   EXPO_APPLE_TEAM_TYPE: ${{ secrets.EXPO_APPLE_TEAM_TYPE }}
   RESPOND_APTABASE_APP_KEY: ${{ secrets.RESPOND_APTABASE_APP_KEY }}
   RESPOND_APTABASE_URL: ${{ secrets.RESPOND_APTABASE_URL }}
+  RESPOND_COUNTLY_APP_KEY: ${{ secrets.RESPOND_COUNTLY_APP_KEY }}
+  RESPOND_COUNTLY_URL: ${{ secrets.RESPOND_COUNTLY_URL }}
   NODE_OPTIONS: --openssl-legacy-provider
 
 jobs:
