--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,25 @@
   },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#8804a5",
+    "activityBar.background": "#8804a5",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#9c8004",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#8804a5",
+    "statusBar.background": "#5f0373",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#8804a5",
+    "statusBarItem.remoteBackground": "#5f0373",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#5f0373",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#5f037399",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "peacock.color": "#5f0373"
 }
