CU-868frp6xf Updated to FlashList instead of FlatList.

--- a/package.json
+++ b/package.json
@@ -77,9 +77,9 @@
     "@gorhom/bottom-sheet": "~5.0.5",
     "@hookform/resolvers": "~3.9.0",
     "@legendapp/motion": "~2.4.0",
-    "@livekit/react-native": "~2.7.4",
+    "@livekit/react-native": "~2.9.1",
     "@livekit/react-native-expo-plugin": "~1.0.1",
-    "@livekit/react-native-webrtc": "~125.0.11",
+    "@livekit/react-native-webrtc": "~137.0.2",
     "@microsoft/signalr": "~8.0.7",
     "@notifee/react-native": "^9.1.8",
     "@novu/react-native": "~2.6.6",
@@ -87,7 +87,7 @@
     "@rnmapbox/maps": "10.1.42-rc.0",
     "@semantic-release/git": "^10.0.1",
     "@sentry/react-native": "~6.14.0",
-    "@shopify/flash-list": "1.7.6",
+    "@shopify/flash-list": "~2.1.0",
     "@tanstack/react-query": "~5.52.1",
     "app-icon-badge": "^0.1.2",
     "axios": "^1.11.0",
