--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@config-plugins/react-native-webrtc": "~12.0.0",
     "@dev-plugins/react-query": "~0.3.1",
     "@expo/html-elements": "~0.10.1",
-    "@expo/metro-runtime": "~5.0.4",
+    "@expo/metro-runtime": "~5.0.5",
     "@gluestack-ui/accordion": "~1.0.6",
     "@gluestack-ui/actionsheet": "^0.2.44",
     "@gluestack-ui/alert": "~0.1.15",
@@ -87,16 +87,16 @@
     "@rnmapbox/maps": "10.1.42-rc.0",
     "@semantic-release/git": "^10.0.1",
     "@sentry/react-native": "~6.14.0",
-    "@shopify/flash-list": "~2.1.0",
+    "@shopify/flash-list": "1.7.6",
     "@tanstack/react-query": "~5.52.1",
     "app-icon-badge": "^0.1.2",
-    "axios": "^1.11.0",
+    "axios": "^1.12.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "buffer": "^6.0.3",
     "countly-sdk-react-native-bridge": "^25.4.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.0",
+    "expo": "~53.0.23",
     "expo-application": "~6.1.5",
     "expo-asset": "~11.1.7",
     "expo-audio": "~0.4.9",
@@ -117,7 +117,7 @@
     "expo-location": "~18.1.6",
     "expo-navigation-bar": "~4.2.8",
     "expo-notifications": "~0.31.4",
-    "expo-router": "~5.1.5",
+    "expo-router": "~5.1.7",
     "expo-screen-orientation": "~8.1.7",
     "expo-secure-store": "~14.2.4",
     "expo-sharing": "~13.1.5",
@@ -138,7 +138,7 @@
     "react-error-boundary": "~4.0.13",
     "react-hook-form": "~7.53.0",
     "react-i18next": "~15.0.1",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-base64": "~0.2.1",
     "react-native-ble-manager": "^12.1.5",
     "react-native-calendars": "^1.1313.0",
