--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
     "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "~5.62.0",
     "@typescript-eslint/parser": "~5.62.0",
+    "axios-mock-adapter": "^2.1.0",
     "babel-jest": "~30.0.0",
     "cross-env": "~7.0.3",
     "dotenv": "~16.4.5",
