--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -401,7 +401,7 @@ jobs:
             '{
               "version": $version,
               "title": ("Release v" + $version),
-              "content": $notes,
+              "content": $notes
             }')
           
           # Send to Changerawr API
