RR-T40 Fixing map error, staffing issues, bottom sheets, edit call.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "cross-env EXPO_NO_DOTENV=1 expo start",
+    "postinstall": "patch-package",
     "prebuild": "cross-env EXPO_NO_DOTENV=1 yarn expo prebuild",
     "android": "cross-env EXPO_NO_DOTENV=1 expo run:android",
     "ios": "cross-env EXPO_NO_DOTENV=1 expo run:ios",
@@ -84,7 +85,7 @@
     "@notifee/react-native": "^9.1.8",
     "@novu/react-native": "~2.6.6",
     "@react-native-community/netinfo": "11.4.1",
-    "@rnmapbox/maps": "10.1.42-rc.0",
+    "@rnmapbox/maps": "10.2.10",
     "@semantic-release/git": "^10.0.1",
     "@sentry/react-native": "~6.14.0",
     "@shopify/flash-list": "1.7.6",
@@ -206,6 +207,8 @@
     "jest-junit": "~16.0.0",
     "lint-staged": "~15.2.9",
     "np": "~10.0.7",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "~3.3.3",
     "react-native-svg-transformer": "~1.5.1",
     "tailwindcss": "3.4.4",
